--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,30 @@ Assets/StreamingAssets/BWD 4K/6.mp4.meta
 Assets/StreamingAssets/BWD 4K/7.mp4.meta
 Assets/StreamingAssets/BWD 4K/8.mp4.meta
 Assets/StreamingAssets/BWD 4K/9.mp4.meta
+Assets/Resources/BWD 2K/a.mp4.meta
+Assets/Resources/BWD 2K/b.mp4.meta
+Assets/Resources/BWD 2K/c.mp4.meta
+Assets/Resources/BWD 2K/f.mp4.meta
+Assets/Resources/BWD 2K/h.mp4.meta
+Assets/Resources/BWD 2K/j.mp4.meta
+Assets/Resources/BWD 4K/0.mp4.meta
+Assets/Resources/BWD 4K/0.mp4.meta
+Assets/Resources/BWD 4K/1.mp4.meta
+Assets/Resources/BWD 4K/2.mp4.meta
+Assets/Resources/BWD 4K/1.mp4.meta
+Assets/Resources/BWD 4K/3.mp4.meta
+Assets/Resources/BWD 4K/5.mp4.meta
+Assets/Resources/BWD 4K/7.mp4.meta
+Assets/Resources/BWD 4K/4.mp4.meta
+Assets/Resources/BWD 2K/l.mp4.meta
+Assets/Resources/BWD 4K/8.mp4.meta
+Assets/Resources/BWD 4K/6.mp4.meta
+Assets/Resources/BWD 4K/8.mp4.meta
+Assets/Resources/BWD 4K/9.mp4.meta
+Assets/Resources/BWD 2K/k.mp4.meta
+Assets/Resources/BWD 2K/e.mp4.meta
+Assets/Resources/BWD 2K/i.mp4.meta
+Assets/Resources/BWD 2K/g.mp4.meta
+Assets/Resources/BWD 4K/910.mp4.meta
+Assets/Resources/BWD 4K/911.mp4.meta
+Assets/Resources/BWD 2K/d.mp4.meta
