--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,5 @@ Assets/Resources/BWD 2K/g.mp4.meta
 Assets/Resources/BWD 4K/910.mp4.meta
 Assets/Resources/BWD 4K/911.mp4.meta
 Assets/Resources/BWD 2K/d.mp4.meta
+Assets/Resources/BWD 2K/a.webm
+Assets/Resources/BWD 2K/a.webm.meta
