Gitignored new mov video and meta files

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,55 @@ Assets/Resources/BWD 4K/911.mp4.meta
 Assets/Resources/BWD 2K/d.mp4.meta
 Assets/Resources/BWD 2K/a.webm
 Assets/Resources/BWD 2K/a.webm.meta
+Assets/Resources/BWD 2K/0.mov
+Assets/Resources/BWD 2K/1.mov
+Assets/Resources/BWD 2K/10.mov
+Assets/Resources/BWD 2K/11.mov
+Assets/Resources/BWD 2K/2.mov
+Assets/Resources/BWD 2K/3.mov
+Assets/Resources/BWD 2K/4.mov
+Assets/Resources/BWD 2K/5.mov
+Assets/Resources/BWD 2K/6.mov
+Assets/Resources/BWD 2K/7.mov
+Assets/Resources/BWD 2K/8.mov
+Assets/Resources/BWD 2K/9.mov
+Assets/Resources/BWD 2K/910.mov
+Assets/Resources/BWD 2K/911.mov
+Assets/Resources/BWD 4K/0.mov
+Assets/Resources/BWD 4K/1.mov
+Assets/Resources/BWD 4K/10.mov
+Assets/Resources/BWD 4K/11.mov
+Assets/Resources/BWD 4K/2.mov
+Assets/Resources/BWD 4K/3.mov
+Assets/Resources/BWD 4K/4.mov
+Assets/Resources/BWD 4K/5.mov
+Assets/Resources/BWD 4K/6.mov
+Assets/Resources/BWD 4K/7.mov
+Assets/Resources/BWD 4K/8.mov
+Assets/Resources/BWD 4K/9.mov
+Assets/Resources/BWD 2K/0.mov.meta
+Assets/Resources/BWD 2K/1.mov.meta
+Assets/Resources/BWD 2K/10.mov.meta
+Assets/Resources/BWD 2K/11.mov.meta
+Assets/Resources/BWD 2K/2.mov.meta
+Assets/Resources/BWD 2K/3.mov.meta
+Assets/Resources/BWD 2K/4.mov.meta
+Assets/Resources/BWD 2K/5.mov.meta
+Assets/Resources/BWD 2K/6.mov.meta
+Assets/Resources/BWD 2K/7.mov.meta
+Assets/Resources/BWD 2K/8.mov.meta
+Assets/Resources/BWD 2K/9.mov.meta
+Assets/Resources/BWD 2K/910.mov.meta
+Assets/Resources/BWD 2K/911.mov.meta
+Assets/Resources/BWD 4K/0.mov.meta
+Assets/Resources/BWD 4K/1.mov.meta
+Assets/Resources/BWD 4K/10.mov.meta
+Assets/Resources/BWD 4K/11.mov.meta
+Assets/Resources/BWD 4K/2.mov.meta
+Assets/Resources/BWD 4K/3.mov.meta
+Assets/Resources/BWD 4K/4.mov.meta
+Assets/Resources/BWD 4K/5.mov.meta
+Assets/Resources/BWD 4K/6.mov.meta
+Assets/Resources/BWD 4K/7.mov.meta
+Assets/Resources/BWD 4K/8.mov.meta
+Assets/Resources/BWD 4K/9.mov.meta
